<resources>
    <string name="app_name">2TRAVEL</string>
    <string name="action_home">Home</string>
    <string name="Support">Support</string>
    <string name="language">Language</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="OurPlaces">Choose your place</string>
    <string name="MostPoupularPrograms">Most poupular programs</string>
    <string name="Name">Name</string>
    <string name="EnterYourName">Enter your name</string>
    <string name="email">E-mail</string>
    <string name="EnterYourEmail">Enter your Email</string>
    <string name="phone">Phone</string>
    <string name="EnterYourPhone">Enter your phone</string>
    <string name="NumberOfPerson">Num of person</string>
    <string name="EnterYourNum">Enter your number</string>
    <string name="from">From</string>
    <string name="EnterStartDay">Enter start day</string>
    <string name="to">To</string>
    <string name="EnterEndDay">Enter end day</string>
    <string name="OrderOfRoom">Order of room</string>
    <string name="VisaOrCash"><![CDATA[Visa & Cash]]></string>
    <string name="visa">Visa</string>
    <string name="cash">Cash</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="Ssn">SSN</string>
    <string name="EnterYourSnn">Enter your SSN</string>
    <string name="EnterYourSsn">Enter your SSN</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="yourname">Your name</string>
    <string name="EnterYourSecretSsn">Enter your Secrect SSN</string>
    <string name="EnterYourSecretNum">Enter your secret num</string>
    <string name="visanum">Visa num</string>
    <string name="EnterYourVisaNum">Enter your visa num</string>
    <string name="text">place name</string>
    <string name="iformation">Iformation</string>
    <string name="reservation">Reservation</string>
    <string name="contact">Contact</string>
    <string name="fax">Fax</string>
    <string name="faxnumber">+1-212-9876543</string>
    <string name="e_mailsupport">2travel@outlook.com</string>
    <string name="phonenum">Phone number</string>
    <string name="places">Places</string>
    <string name="citynasr">Nasr-City</string>
    <string name="paris">Paris</string>
    <string name="estanbol">Estanbol</string>
    <string name="estanbul">Estanbul</string>
    <string name="viaana">Viaana</string>
    <string name="CallNow">Call now</string>
    <string name="nationality">Nationality</string>
    <string name="EnterYourNationality">Enter your nationality</string>
    <string name="day">Day</string>
    <string name="room_type">Room type</string>
    <string name="offer">Offer</string>
    <string name="EnterYourOffer">Enter your offer</string>
    <string name="phonenumber">999531698</string>
    <string name="Greece">Greece</string>
    <string name="Turkey">Turkey</string>
    <string name="Italy">Italy</string>
    <string name="France">France</string>

</resources>
