<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ApplicationActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            style="@style/textStyle3"
            android:layout_margin="15dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_name"
            android:hint="@string/EnterYourName"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/nationality"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_nationality"
            android:hint="@string/EnterYourNationality"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="text"  />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/Ssn"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_ssn"
            android:hint="@string/EnterYourSnn"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_email"
            android:hint="@string/EnterYourEmail"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_phone"
            android:hint="@string/EnterYourPhone"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/day"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_from"
            android:hint="@string/EnterStartDay"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"
            android:inputType="date"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/OrderOfRoom"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spin_Order_Of_Room"
            android:autofillHints="@string/room_type"
            style="@style/textStyle2"
            android:layout_marginTop="15sp"
            android:layout_marginRight="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            style="@style/textStyle3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/NumberOfPerson" />

        <EditText
            android:id="@+id/edt_Num_Of_Persom"
            style="@style/textStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/EnterYourNum"
            android:layout_marginRight="15dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/VisaOrCash"
            style="@style/textStyle3"
            android:layout_margin="15dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rg_paying"
            android:layout_marginTop="15sp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle2"
                android:id="@+id/rb_visa"
                android:text="@string/visa"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStyle2"
                android:id="@+id/rb_cash"
                android:text="@string/cash"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        android:id="@+id/linearvisa"
        android:orientation="horizontal">

        <TextView
            style="@style/textStyle3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/visanum" />

        <EditText
            android:id="@+id/edt_visanum"
            style="@style/textStyle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/EnterYourVisaNum"
            android:layout_marginRight="15dp"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:id="@+id/btn_book"
            android:background="@color/mycolor"
            android:textColor="@color/background"
            style="@style/textStyle3"
            android:layout_weight="1"
            android:layout_margin="15dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:background="@color/mycolor"
            android:textColor="@color/background"
            style="@style/textStyle3"
            android:layout_weight="1"
            android:layout_margin="15dp" />
    </LinearLayout>


</LinearLayout>
</ScrollView>