<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.river.touristproject.support"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                style="@style/textStyle"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fax"
                style="@style/textStyle3"
                android:layout_margin="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faxnumber"
                style="@style/textStyle2"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/textStyle3"
                android:layout_margin="15dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mailsupport"
                style="@style/textStyle2"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/phonenum"
                style="@style/textStyle3"
                android:layout_margin="15dp"/>
            <TextView
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phonenumber"
                style="@style/textStyle2"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/places"
                style="@style/textStyle3"
                android:layout_margin="15dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/citynasr"
                    style="@style/textStyle2"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paris"
                    android:layout_marginRight="15dp"
                    style="@style/textStyle2"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estanbul"
                    android:layout_marginRight="15dp"
                    style="@style/textStyle2"
                    android:layout_marginTop="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viaana"
                    style="@style/textStyle2"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/contactcall"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_local_phone_black_24dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                />
            <Button
                android:id="@+id/contactmessage"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_message_black_24dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp"
                />

        </LinearLayout>


    </LinearLayout>
</ScrollView>