<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".MoreDelailsActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_place"
        android:src="@drawable/france"
        android:scaleType="centerCrop"
        app:riv_corner_radius="30dip"
        app:riv_border_width="2dip"
        app:riv_border_color="@color/mycolor"
        app:riv_mutate_background="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_height="200dp"
        android:layout_width="350dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:id="@+id/tv_palceName"
        style="@style/textStyle"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:text="@string/iformation"
        android:id="@+id/lv_palceInfo"

        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_reservation"
        android:layout_gravity="center"
        android:text="@string/reservation"
        android:background="@color/mycolor"
        android:textColor="@color/background"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        style="@style/textStyle3"/>



</LinearLayout>
</ScrollView>